also needs to validate
2007-07-25  Jakub Steiner <jimmac@ximian.com>

* includes/imagebox.xhtml: also needs to validate

svn path=/branches/v2.4/; revision=1540

--- a/includes/imagebox.xhtml
+++ b/includes/imagebox.xhtml
@@ -2,13 +2,14 @@
 <script type="text/javascript" src="/includes/imagebox.js"></script>
 <script type="text/javascript">
 	//image preview
+	//<!--
 	$(document).ready(function() {
 			$.ImageBox.init(
 				{
 					loaderSRC: '/images/loading.gif',
-					closeHTML: '<img src="/images/close.png" />'
+					closeHTML: '<img src="/images/close.png" alt="x" />'
 				}
 			);
-			console.log("foo");
 	});
+	//-->
 </script>
