--- a/style/ie-nastiness.css
+++ b/style/ie-nastiness.css
@@ -1,9 +1,14 @@
 /* Nasty workaround for IE browsers */
-
+#header,
+#maincontainer,
+#bottommenu,
+#linkbar {
+  width: 65em;
+  margin: 0 auto;
+}
 
 #main {
   width: 40em;
-  max-width: 40em;
 }
 
 div.splash {
