bring back scaling for non safari browsers includes/wgo.js
2007-08-14  Jakub Steiner <jimmac@ximian.com>

* includes/imagebox.js: bring back scaling for non safari browsers
* includes/wgo.js
* includes/wgo-scripts.xhtml:
* includes/jquery.js: use faster jquery (latest).

svn path=/branches/v2.4/; revision=1549

--- a/includes/imagebox.xhtml
+++ b/includes/imagebox.xhtml
@@ -4,12 +4,15 @@
 	//image preview
 	//<!--
 	$(document).ready(function() {
-			$.ImageBox.init(
-				{
-					loaderSRC: '/images/loading.gif',
-					closeHTML: '<img src="/images/close.png" alt="x" />'
-				}
-			);
+		//alert("b: " + $.browser.safari + " v: " + $.browser.version.number.prototype);
+			if (!$.browser.safari) { //sadly no way to figure out v2 from v3 which would be able to handle it
+				$.ImageBox.init(
+					{
+						loaderSRC: '/images/loading.gif',
+						closeHTML: '<img src="/images/close.png" alt="x" />'
+					}
+				);
+			}
 	});
 	//-->
 </script>
