--- a/includes/wgo-scripts.xhtml
+++ b/includes/wgo-scripts.xhtml
@@ -1,5 +1,5 @@
 <!-- $Id: wgo-scripts.xhtml 795 2007-07-04 11:01:43Z jimmac $ -->
-<script type="text/javascript" src="/includes/jquery-old.js"></script>
+<script type="text/javascript" src="/includes/jquery.js"></script>
 <!--[if lt IE 8]>
 <script type="text/javascript" src="/includes/excanvas.pack.js"></script>
 <![endif]-->
