style/wgo.css applied the fix for Safari Browsers + Scaling support
2007-08-16  Roman Joost  <romanofski@gimp.org>

	* style/wgo.css
	* includes/imagebox.js: applied the fix for Safari Browsers +
	Scaling support

svn path=/branches/v2.4/; revision=1562

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -17,6 +17,13 @@
 
 @import url("/style/interface.css");
 
+#ImageBoxCurrentImage {
+  max-width: 800px;
+}
+#ImageBoxOuterContainer {
+  width: 100% !important;
+}
+
 body {
   background: #0e2426;
   color: white;
