--- a/includes/wgo-scripts.xhtml
+++ b/includes/wgo-scripts.xhtml
@@ -3,7 +3,7 @@
 <!--[if lt IE 8]>
 <script type="text/javascript" src="/includes/excanvas.pack.js"></script>
 <![endif]-->
-<script type="text/javascript" src="/includes/jquery.corner.pack.js"></script>
+<script type="text/javascript" src="/includes/jquery.corner.js"></script>
 <script type="text/javascript" src="/includes/jqbrowser.js"></script>
 <script type="text/javascript" src="/includes/wgo.js"></script>
 
