--- a/style/wgo.css
+++ b/style/wgo.css
@@ -376,11 +376,11 @@ form {
 }
 
 div.splashes a {
-	margin-bottom: 54px;
+	margin-bottom: 64px;
 }
 
 div.splashes a:hover {
-	margin: 2px 2px 52px 2px;
+	margin: 2px 2px 62px 2px;
 	border: 2px solid #f57900;
 }
 
@@ -392,7 +392,7 @@ div.splashes a:hover {
 div.splashes a>p {
 	background-color: #222;
 	width: 108px;
-	height: 22px;
+	height: 4em;
 	font-size: 70%;
 	font-weight: normal;
 	margin: 2px 0px;
