Fixed broken link.
2007-10-05  Raphael Quinet  <raphael@gimp.org>

	* includes/wgo-page-fini.xhtml: Fixed broken link.

	* admin/gimp-web-urls: Trimmed down the list of substitutions by
	removing most items that were never used, most specialized items
	that were used only once (such as the mailing list archives or the
	size of the thumbnail images of book covers), and items that were
	anyway listed with their full URL in the text (such as references
	to docs.gimp.org).

	* mail_lists.htrw
	* team.htrw
	* about/index.htrw
	* about/everywhere.htrw
	* about/selling.htrw
	* books/index.htrw
	* release-notes/gimp-2.2.htrw
	* release-notes/gimp-2.3.htrw
	* tutorials/Draw_A_Paint_Brush/index.htrw
	* tutorials/Smart_Sharpening/index.htrw: Replaced some single-use
	substitutions by the corresponding URLs.  Should make maintenance
	much easier for the list of books and mailing lists.
	
	* docs/index.htrw: Updated the list of languages for 2.4.

	* about/splash/index.htrw: Improved instructions for 2.4, prefer
	personal directories instead of system-wide installation of splash
	screens.

	* about/splash/contest/index.htrw: Rewritten, mention that all
	contests are closed.  Alas, the links to the previous images are
	gone.

	* release-notes/index.htrw: 2.4 will be the stable release by the
	time this site goes live.  Added links to older release notes.

	* unix/index.htrw
	* windows/index.htrw: Updated, recommend the installation of the
	help files (user manual).

svn path=/branches/v2.4/; revision=1589

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -22,7 +22,7 @@
 	  <li><a href="/docs/userfaq.html">FAQ</a></li>
 	  <li><a href="/books/">Books</a></li>
 	  <li><a href="/tutorials/">Tutorials</a></li>
-	  <li><a href="mail_lists.html">Mailing Lists</a></li>
+	  <li><a href="/mail_lists.html">Mailing Lists</a></li>
 	  <li><a href="http://wiki.gimp.org">Wiki</a></li>
 	</ul>
   </div>
@@ -49,7 +49,7 @@
     <div>&copy; 2001-2007 <a href="/team.html">The GIMP Team</a> <span style="padding: 0px 10px;">&nbsp;</span>
     <a href="http://gimp.org/news.rdf">GIMP News Feed</a> | 
     <a href="/webmasters.html">Contacting Us</a>
-		</div>
+    </div>
   </div>
 </div>
 
