Suggest using the gimp-web mailing list.
2007-10-19  Raphael Quinet  <raphael@gimp.org>

	* webmasters.htrw: Suggest using the gimp-web mailing list.

	* about/everywhere.htrw: Ask for contributions.

	* irc.htrw: Added anchors #just_ask and #rules, added and fixed
	some links.

	* includes/wgo-page-fini.xhtml: Added "IRC" link, moved "Wiki" to
	the first column and "GIMP everywhere" to the fourth one.

svn path=/branches/v2.4/; revision=1645

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -7,7 +7,7 @@
 	<ul>
 	  <li class="mainlink"><a href="/features/">Features</a></li>
 	  <li><a href="/release-notes/">Release Notes</a></li>
-	  <li><a href="/about/everywhere.html">GIMP Everywhere</a></li>
+	  <li><a href="http://wiki.gimp.org/gimp/">Wiki</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
@@ -23,7 +23,7 @@
 	  <li><a href="/books/">Books</a></li>
 	  <li><a href="/tutorials/">Tutorials</a></li>
 	  <li><a href="/mail_lists.html">Mailing Lists</a></li>
-	  <li><a href="http://wiki.gimp.org">Wiki</a></li>
+	  <li><a href="/irc.html">IRC</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
@@ -31,6 +31,7 @@
 	  <li class="mainlink"><a href="/about/">History</a></li>
 	  <li><a href="/about/splash/">Splash Archive</a></li>
 	  <li><a href="/links/">Links</a></li>
+	  <li><a href="/about/everywhere.html">GIMP Everywhere</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
