Re-added the links to the platform-specific sections: Unix, Windows, Mac
2007-10-20  Raphael Quinet  <raphael@gimp.org>

	* includes/wgo-page-fini.xhtml: Re-added the links to the
	platform-specific sections: Unix, Windows, Mac OS X.  This
	placement is not ideal and should be retought in the future.

	* webmasters.htrw: Also suggest IRC.

svn path=/branches/v2.4/; revision=1646

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -14,6 +14,9 @@
 	<ul>
 	  <li class="mainlink"><a href="/screenshots/">Screenshots</a></li>
 	  <li class="mainlink"><a href="/downloads/">Downloads</a></li>
+	  <li><a href="/unix/">Unix</a></li>
+	  <li><a href="/windows/">Windows</a></li>
+	  <li><a href="/macintosh/">Mac OS X</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
