--- a/style/wgo.css
+++ b/style/wgo.css
@@ -102,7 +102,7 @@ h2 {
   clear: left;
 }
 
-p+h2 {
+p+h2, pre+h2, ul+h2, ol+h2 {
   /* all headings that follow a paragraph should be indented more */
   margin-top: 3em;
 }
@@ -119,7 +119,7 @@ h3 {
   clear: left;
 }
 
-p+h3 {
+p+h3, pre+h3, ul+h3, ol+h3 {
   /* all headings that follow a paragraph should be indented more */
   margin-top: 4em;
 }
