--- a/style/wgo.css
+++ b/style/wgo.css
@@ -45,6 +45,13 @@ a[href]:hover {
   font-weight: bold;
 }
 
+hr {
+  border: 0;
+  width: 80%;
+  height: 2px;
+  background: #1f2a2a;
+}
+
 img {
   border: none;
 }
