center the embedded flash movies.
2007-10-24  Jakub Steiner <jimmac@ximian.com>

* style/wgo.css:
* release-notes/gimp-2.4.htrw: center the embedded flash movies.

svn path=/branches/v2.4/; revision=1682

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -78,7 +78,7 @@ img.right, object.right {
   margin-right: 40px;
 }
 
-img.figure {
+img.figure, .flash {
   display: block;
   margin: 1em auto;
   max-width: 500px;
@@ -504,7 +504,7 @@ form {
   clear: both;
   background: #111;
   color: #aaa;
-  border-top: 1px solid #666;
+ /* border-top: 1px solid #666; */
   font-weight: bold;
   text-align: center;
   min-height: 8em;
