added top and bottom margins to img.right and img.left.
2007-10-25  Raphael Quinet  <raphael@gimp.org>

	* style/wgo.css: added top and bottom margins to img.right and
	img.left.

svn path=/branches/v2.4/; revision=1706

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -70,12 +70,16 @@ img.left {
   float: left;
   margin-left: 40px;
   margin-right: 20px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 img.right, object.right {
   float: right;
   margin-left: 20px;
   margin-right: 40px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 img.figure, .flash {
