replaced Candarra by Candara in the body font family rule. Fixes bug
2008-09-17  Michael Schumacher  <schumaml@cvs.gnome.org>

	* style/wgo.css: replaced Candarra by Candara in the body font
	family rule. Fixes bug #523175.

svn path=/trunk/; revision=1804

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -27,7 +27,7 @@
 body {
   background: #0e2426;
   color: white;
-  font-family: Candarra, Sans-Serif;
+  font-family: Candara, Sans-Serif;
   margin: 0px;
   padding: 0px;
   font-size: 10pt;
