index.htrw removed version number from image ID for the splash overlay.
2008-10-01  Sven Neumann  <sven@gimp.org>

	* index.htrw
	* style/wgo.css: removed version number from image ID for the
	splash overlay.


svn path=/trunk/; revision=1879

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -630,7 +630,7 @@ div.splash {
     left: 0px;
   }
 
-  .splash img#splash24overlay {
+  .splash img#splashoverlay {
     display: block;
     position: absolute;
     right: 0px;
