Add a div.figure-placeholder class so we can center the image and still
* style/wgo.css: Add a div.figure-placeholder class so we can
center the image and still have it as a link.

* release-notes/gimp-2.6.htrw (We Hope You Enjoy GIMP 2.6!): Link
the groupshot image to its flickr page, and make the LGM 2008
reference into a link to the LGM 2008 page.

svn path=/trunk/; revision=1884

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -80,6 +80,10 @@ img.right, object.right {
   margin-bottom: 1em;
 }
 
+div.figure-placeholder {
+  text-align: center;
+}
+
 img.figure, .flash {
   display: block;
   margin: 1em auto;
