Removed GUG link.
* includes/wgo-page-init.xhtml: Removed GUG link.

* links/index.htrw: Updated with a couple of new sites, and
removed a copule of old ones.

svn path=/trunk/; revision=1904

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -18,8 +18,7 @@
   <a href="/develop/">Get Involved</a>
   <span>]</span><br /><span>[</span>
   <a href="http://registry.gimp.org">Plug-in Registry</a><span> | </span>
-  <a href="http://developer.gimp.org">GIMP Development</a><span> | </span>
-  <a href="http://gug.sunsite.dk">GIMP User Group</a>
+  <a href="http://developer.gimp.org">GIMP Development</a>
   <span>]</span><br />
 
   <span>[</span>
