fixed px width for the menu due to the splash
svn path=/trunk/; revision=1925

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -461,7 +461,7 @@ div.plain-screenshots img:hover {
 }
 
 #menu {
-  width: 12em;
+  width: 160px;
   float: right;
   /* border: 1px solid red; */
   padding: 20px;
