Use position:relative as initial positioning for #menu.

--- a/style/wgo.css
+++ b/style/wgo.css
@@ -470,6 +470,7 @@ div.plain-screenshots img:hover {
   left: 0px;
   margin: 0 0 1em 20px;
   background-color: #0e2426;
+  position:relative;
   z-index: 1;
 }
 
