--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -7,7 +7,7 @@
 	<ul>
 	  <li class="mainlink"><a href="/features/">Features</a></li>
 	  <li><a href="/release-notes/">Release Notes</a></li>
-	  <li><a href="http://wiki.gimp.org/gimp/">Wiki</a></li>
+	  <li><a href="http://wiki.gimp.org/">Wiki</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
