--- a/style/wgo.css
+++ b/style/wgo.css
@@ -646,7 +646,7 @@ div.splash {
     display: block;
     position: absolute;
     right: 0px;
-    bottom: 0px;
+    top: 32px;
     width: 300px;
     height: 140px;
   }
