--- a/includes/wgo-scripts.xhtml
+++ b/includes/wgo-scripts.xhtml
@@ -8,3 +8,15 @@
 <script type="text/javascript" src="/includes/jqbrowser.js"></script>
 <script type="text/javascript" src="/includes/wgo.js"></script>
 
+<!-- code for the flattr button counter -->
+<script type="text/javascript">
+/* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+/* ]]> */</script>
+
