Make it more obvious that Donations and the Flattr button are different entities

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -22,7 +22,8 @@
   <span>]</span><br />
 
   <span>[</span>
-  <a href="/donating/"><img src="/images/donate-sm.png" alt="Donate to GIMP" width="100" height="20" border="0" /></a><span> | </span>
+  <a href="/donating/">Donations<span> | </span>
+  <br />
   <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://www.gimp.org/"></a>
   <noscript><a href="http://flattr.com/thing/707850/GIMP-is-the-GNU-Image-Manipulation-Program" target="_blank">
   <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
