--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -23,7 +23,9 @@
 
   <span>[</span>
   <a href="/donating/">Donations<span> | </span>
-  <br />
+  <span>]</span><br />
+  
+  <span>[</span>
   <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://www.gimp.org/"></a>
   <noscript><a href="http://flattr.com/thing/707850/GIMP-is-the-GNU-Image-Manipulation-Program" target="_blank">
   <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
