--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -22,7 +22,7 @@
   <span>]</span><br />
 
   <span>[</span>
-  <a href="/donating/">Donations<span> | </span>
+  <a href="/donating/">Donations</a>
   <span>]</span><br />
   
   <span>[</span>
