Make the W3C link checker more happy

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -7,7 +7,7 @@
 	<ul>
 	  <li class="mainlink"><a href="/features/">Features</a></li>
 	  <li><a href="/release-notes/">Release Notes</a></li>
-	  <li><a href="http://wiki.gimp.org/">Wiki</a></li>
+	  <li><a href="http://wiki.gimp.org/index.php/Main_Page">Wiki</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
@@ -46,7 +46,7 @@
 
 <div id="linkbar">
   <div>
-    <div>&copy; 2001-2012 <a href="/team.html">The GIMP Team</a> <span style="padding: 0px 10px;">&nbsp;</span>
+    <div>&copy; 2001-2013 <a href="/team.html">The GIMP Team</a> <span style="padding: 0px 10px;">&nbsp;</span>
     <a href="http://gimp.org/news.rdf">GIMP News Feed</a> | 
     <a href="/webmasters.html">Contacting Us</a>
     </div>
