Make styles validate

--- a/includes/wgo-styles.xhtml
+++ b/includes/wgo-styles.xhtml
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
-<style type="text/css"><!--
+<style type="text/css">
 @import url("/style/wgo.css");
-//--></style>
+</style>
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="/style/ie-nastiness.css" />
 <![endif]-->
