Add Bitcoin donation button by Jakub Steiner

--- a/includes/wgo-page-init.xhtml
+++ b/includes/wgo-page-init.xhtml
@@ -28,8 +28,8 @@
   <span>[</span>
   <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://www.gimp.org/"></a>
   <noscript><a href="http://flattr.com/thing/707850/GIMP-is-the-GNU-Image-Manipulation-Program" target="_blank">
-  <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript><!-- <span> | </span>
-  <!-- <a href="bitcoin:1NVMCeoBfTAJQ1qwX2Dx1C8zkcRCQWwHBq?label=GIMP%20Donation"><img src="Bitcoin_logo.png" title="Donate with Bitcoin" border="0"></a> -->
+  <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript><span> | </span>
+  <a href="bitcoin:1NVMCeoBfTAJQ1qwX2Dx1C8zkcRCQWwHBq?label=GIMP%20Donation"><img src="/donating/bitcoin_button.png" title="Donate with Bitcoin" border="0"></a>
   <span>]</span>
 </div>
 
