Added a link to Google+ page into the footer

--- a/includes/wgo-page-fini.xhtml
+++ b/includes/wgo-page-fini.xhtml
@@ -8,6 +8,7 @@
 	  <li class="mainlink"><a href="/features/">Features</a></li>
 	  <li><a href="/release-notes/">Release Notes</a></li>
 	  <li><a href="http://wiki.gimp.org/index.php/Main_Page">Wiki</a></li>
+	  <li><a href="https://plus.google.com/u/0/b/116634837115748851709/+gimp/">Google+ page</a></li>
 	</ul>
   </div>
   <div class="bottomlinks">
